objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Credit Opportunity Process</fullName>
        <description>Credit Opportunity Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Case is Rejected</fullName>
        </values>
        <values>
            <fullName>Stock Negotiation</fullName>
        </values>
        <values>
            <fullName>Waiting for Credit Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credit Opportunity Process with Close stage</fullName>
        <description>Credit Opportunity Process with Close stage</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credit Opportunity Process-DLA</fullName>
        <description>Credit Opportunity Process for DLA (Let RM select Stage)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Create Write Up</fullName>
        </values>
        <values>
            <fullName>Stock Negotiation</fullName>
        </values>
        <values>
            <fullName>Waiting for Credit Setup</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Non-Credit Opportunity Process</fullName>
        <description>Non-Credit Opportunity Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APP1__c</fullName>
        <formula>LEFT( $User.Job_Code__c , 2) &amp; 
CASE( TEXT(Credit_Model__c),
&quot;DLA&quot;, &quot;A&quot;,
&quot;FL&quot;, &quot;1&quot;,
&quot;HPL&quot;, &quot;8&quot;,
&quot;PL&quot;, &quot;9&quot;,
null) &amp;
&quot;/&quot; &amp;
$User.RC_Code__c &amp;
&quot;/&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APP1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APP2__c</fullName>
        <label>APP2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APP3__c</fullName>
        <formula>&quot;/&quot; &amp; IF(YEAR(TODAY())&lt;2500, TEXT(YEAR(TODAY()) + 543), TEXT(YEAR(TODAY())))</formula>
        <label>APP3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for filtering deleted opportunities</description>
        <label>Active Opportunity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Opportunity</relationshipLabel>
        <relationshipName>Opportunity_Active_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Application_Submit_Date__c</fullName>
        <label>Actual Application Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RM_Submit_Date__c</fullName>
        <label>Actual RM Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Visit_Date__c</fullName>
        <description>Call Report Actual Visit Date</description>
        <label>Actual Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Backward_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked Check box if want Backward Stage</description>
        <label>Allow Backward Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Report__c</fullName>
        <formula>CASE (TEXT(StageName),
&quot;Stock Negotiation&quot;, Amount ,
&quot;Create Write Up&quot;, Amount,
&quot;Waiting for Credit Approval&quot;, Request_First_Amount_By_SP__c,
&quot;Case is Rejected&quot;,  Request_First_Amount_By_SP__c, 
&quot;Waiting for Credit Setup&quot;,  Approve_Latest_Amount_By_SP__c,
&quot;Partial Loan Setup&quot;, Setup_Amount__c,
&quot;All Loan Setup&quot;, Setup_Amount__c,
null)</formula>
        <label>Amount_report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Report_s__c</fullName>
        <formula>IF(TEXT(StageName)=&quot;Stock Negotiation&quot;, Amount_Report__c ,0)</formula>
        <label>Amount_Report_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>กรณี Non CMAS ไม่ต้องทำการกรอกเลข App</inlineHelpText>
        <label>Application Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Work in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Workout_Date__c</fullName>
        <label>Approval Workout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approve_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approve_Latest_Amount_By_SP__c</fullName>
        <inlineHelpText>วงเงินที่ได้รับอนุมัติล่าสุด</inlineHelpText>
        <label>Approve Latest Amount By SP</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <summarizedField>Opportunity_Product__c.Approved_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_s__c</fullName>
        <formula>IF(TEXT(StageName)= &quot;Waiting for Credit Setup&quot;,   Approve_Latest_Amount_By_SP__c   ,0)</formula>
        <label>Approved_Amount_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Option__c</fullName>
        <label>Approved Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_AHID__c</fullName>
        <label>Booking AHID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_AHName__c</fullName>
        <label>Booking AHName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Booking_AreaName__c, &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_AreaName__c</fullName>
        <label>Booking AreaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_NHID__c</fullName>
        <label>Booking NHID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_NHName__c</fullName>
        <label>Booking NHName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Booking_NetworkName__c, &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_NetworkName__c</fullName>
        <label>Booking NetworkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_RCCode__c</fullName>
        <label>Booking RCCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_RMID__c</fullName>
        <label>Booking RMID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_RMName__c</fullName>
        <label>Booking RMName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Segment__c</fullName>
        <label>Booking Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_TMID__c</fullName>
        <label>Booking TMID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_TM_Name__c</fullName>
        <label>Booking TM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_TeamName__c</fullName>
        <label>Booking TeamName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Team__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Booking_TeamName__c, &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Verification_Date__c</fullName>
        <inlineHelpText>วันที่ขอเช็คบูโร</inlineHelpText>
        <label>Bureau Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Code_Formula__c</fullName>
        <formula>Business_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Code</label>
        <referenceTo>Business_Code__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIS_Color_Symbol__c</fullName>
        <formula>CASE (  CIS_Color__c  , 
&quot;Green&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;&quot;,20,20), 
&quot;Yellow&quot;, IMAGE(&quot;/resource/YellowLight&quot;,&quot;&quot;,20,20),
&quot;Red&quot;, IMAGE(&quot;/resource/RedLight&quot;,&quot;&quot;,20,20),
&quot;Grey&quot;, IMAGE(&quot;/resource/GreyLight&quot;,&quot;&quot;,20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS Color Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_Color__c</fullName>
        <formula>Account.UW_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <formula>Account.Name</formula>
        <label>CIS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Amount__c</fullName>
        <label>Cancel Amount</label>
        <summarizedField>Opportunity_Product__c.Requested_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Cancel</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Close_Opp_AH__c</fullName>
        <label>Close Opp AH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Opp_NH__c</fullName>
        <label>Close Opp NH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Opp_Owner__c</fullName>
        <label>Close Opp Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Opp_TM__c</fullName>
        <label>Close Opp TM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Stage__c</fullName>
        <formula>IF ( TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot; , &quot;&quot; , 

IF ( Setup_Amount__c  &lt;&gt; 0 , &quot;RM ดำเนินการตั้งวงเงินได้&quot; ,

IF ( OR ( Approved_Amount__c  &lt;&gt; 0 , TEXT ( Approval_Workout_Date__c) &lt;&gt; &quot;&quot; ),  &quot;UW อนุมัติแล้วรอ RM ดำเนินการเพื่อตั้งวงเงิน&quot; ,

IF ( AND( Amount  &lt;&gt; 0 , TEXT( First_Application_SO_Receive_Date__c ) &lt;&gt; &quot;&quot; ), &quot;UW พิจารณาความเสี่ยง&quot; ,

IF ( AND( Amount  &lt;&gt; 0 , TEXT(Tentative_Application_Submit_Date__c) &lt;&gt; &quot;&quot; ), &quot;RM จัดทำใบเสนอเรื่อง&quot; ,

IF ( OR ( Amount_Report__c &lt;&gt; 0 , TEXT( Actual_Visit_Date__c ) &lt;&gt; &quot;&quot; ), &quot;RM เจรจากับลูกค้า&quot; , &quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_from_Call_Report__c</fullName>
        <label>Convert from Call Report</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <formula>IF (  Owner.Id =  $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMyArea__c</fullName>
        <formula>IF (  Owner.AH_RC_Code__c =  $User.RC_Code__c , 1 ,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyArea</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMyNetwork__c</fullName>
        <formula>IF (  Owner.NH_RC_Code__c =  $User.RC_Code__c , 1 ,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyNetwork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedByMyTeam__c</fullName>
        <formula>IF (  Owner.RC_Code__c =  $User.RC_Code__c , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByMyTeam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creator_AHID__c</fullName>
        <label>Inflow AHID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_AHName__c</fullName>
        <label>Inflow AHName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Creator_AreaName__c, &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inflow AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_AreaName__c</fullName>
        <label>Inflow AreaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NHID__c</fullName>
        <label>Inflow NHID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NHName__c</fullName>
        <label>Inflow NHName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Creator_NetworkName__c, &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inflow NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_NetworkName__c</fullName>
        <label>Inflow NetworkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_RCCode__c</fullName>
        <label>Inflow RCCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_RM__c</fullName>
        <label>Inflow RM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Segment__c</fullName>
        <label>Inflow Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_TMID__c</fullName>
        <label>Inflow TMID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_TM_Name__c</fullName>
        <label>Inflow TM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_TeamName__c</fullName>
        <label>Inflow TeamName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Creator_TeamName__c, &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inflow Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Model_Final__c</fullName>
        <formula>IF(Text(Credit_Model_by_SP__c)= null, Text(Credit_Model__c),Text(Credit_Model_by_SP__c))</formula>
        <label>Credit Model Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Model__c</fullName>
        <label>Credit Model</label>
        <picklist>
            <picklistValues>
                <fullName>DLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุโลมขอใช้เลขจากทะเบียนคุม</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Model_by_SP__c</fullName>
        <label>Credit Model by SP</label>
        <picklist>
            <picklistValues>
                <fullName>DLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Setup_Date__c</fullName>
        <label>Credit Setup Date</label>
        <summarizedField>Opportunity_Product__c.Setup_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Opportunities (Current AH Name)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_AH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current AH to send request for approval</description>
        <label>Current AH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Current_AH_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Leg__c</fullName>
        <formula>CASE(Text(StageName), 
&quot;Stock Negotiation&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;Leg2(เคยResubmit)&quot;,&quot;Leg1&quot;),
&quot;Create Write Up&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;Leg2(เคยResubmit)&quot;,&quot;Leg1&quot;),
&quot;Waiting for Credit Approval&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;Leg2(เคยResubmit)&quot;,&quot;Leg2&quot;),
&quot;Case is Rejected&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;Leg2(เคยResubmit)&quot;,&quot;Leg2&quot;),
&quot;Waiting for Credit Setup&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;Leg3(เคยResubmit)&quot;,&quot;Leg3&quot;),
&quot;Partial Loan Setup&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;End(เคยResubmit)&quot;,&quot;End&quot;),
&quot;All Loan Setup&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;End(เคยResubmit)&quot;,&quot;End&quot;),
&quot;Closed Lost&quot;, IF(Number_of_Resubmit_by_SP__c&gt;0,&quot;End(เคยResubmit)&quot;,&quot;End&quot;),
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Leg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Opportunities (Current NH Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_NH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current NH to send request for approval</description>
        <label>Current NH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Current_NH_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Extension</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.Name_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E2Eday__c</fullName>
        <formula>L3enddate__c - L1startdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E2Eday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Application_SO_Receive_Date__c</fullName>
        <label>First Application SO Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Setup_Date__c</fullName>
        <label>First Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FlagErrDate__c</fullName>
        <formula>IF(First_Application_SO_Receive_Date__c &gt; TODAY() ,1,0)</formula>
        <label>FlagErrDate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_been_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has been approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of UW Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>UW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCloseWon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCloseWon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotOverL1__c</fullName>
        <formula>IF(  Over_SLA_L1__c = &quot;ไม่เกินกำหนด&quot; ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNotOverL1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsOverL1__c</fullName>
        <formula>if( Over_SLA_L1__c = &quot;เกินกำหนด&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOverL1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsRejected__c</fullName>
        <formula>IF ( TEXT( StageName ) = &quot;Case is Rejected&quot;, 1 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsRejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsWaiting4Approve__c</fullName>
        <formula>IF ( TEXT( StageName ) = &quot;Waiting for Credit Approval&quot;, 1 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsWaitingForApproval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_App_In__c</fullName>
        <label>Is App In ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Pipeline_This_Month__c</fullName>
        <formula>IF ( OR ( TEXT(StageName) = &quot;Stock Negotiation&quot; ,
          TEXT(StageName) = &quot;Create Write Up&quot; ,
          TEXT(StageName) = &quot;Waiting for Credit Approval&quot; ,
          TEXT(StageName) = &quot;Waiting for Credit Setup&quot; ,

          TEXT(StageName) = &quot;Case is Rejected&quot;
         )
     , 1

     , IF ( AND ( OR(TEXT(StageName) = &quot;Partial Loan Setup&quot; ,
                    TEXT(StageName) = &quot;All Loan Setup&quot; 
                    ),
                 MONTH ( Credit_Setup_Date__c ) = MONTH(TODAY()) ,
                 YEAR ( Credit_Setup_Date__c ) = YEAR(TODAY())
                )
            , 1
            , IF ( TEXT(StageName) = &quot;Closed Lost&quot;,0,0)
           )
    )</formula>
        <label>IsPipelineThisMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1day__c</fullName>
        <formula>L1enddate__c -  L1startdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1enddate__c</fullName>
        <formula>IF(text(First_Application_SO_Receive_Date__c)=NULL,
	IF(text(Actual_RM_Submit_Date__c)=NULL,
		IF(TODAY()&gt;OppClosedDate__c,
			OppClosedDate__c,
			TODAY()),
		Actual_RM_Submit_Date__c),
	First_Application_SO_Receive_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1enddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L1startdate__c</fullName>
        <formula>IF(text(Actual_Visit_Date__c) = NULL, IF(text(Bureau_Verification_Date__c)=NULL, DATEVALUE(CreatedDate) ,Bureau_Verification_Date__c) ,Actual_Visit_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1startdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2day__c</fullName>
        <formula>IF(text(First_Application_SO_Receive_Date__c) = NULL,NULL,L2endDate__c - First_Application_SO_Receive_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2endDate__c</fullName>
        <formula>IF(OR(text( StageName )=&quot;Waiting for Credit Approval&quot;,text(StageName )=&quot;Case is Rejected&quot;),Today(),if(text(Approval_Workout_Date__c)&lt;&gt;Null,Approval_Workout_Date__c, OppClosedDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2endDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L3day__c</fullName>
        <formula>IF(text(L2endDate__c) = NULL,NULL,L3enddate__c- L2endDate__c)</formula>
        <label>L3day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L3enddate__c</fullName>
        <formula>IF(text(StageName)=&quot;Closed Lost&quot;, L2endDate__c,IF(text(Credit_Setup_Date__c) = NULL, IF(TODAY()&gt; OppClosedDate__c,OppClosedDate__c,TODAY() ),Credit_Setup_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3enddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Date__c</fullName>
        <formula>Account.Last_Visited_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Application_Number__c</fullName>
        <label>Latest Application Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Stage_Modified_Date__c</fullName>
        <label>Latest Stage Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Setup_Date__c</fullName>
        <label>Loan Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Amount_s__c</fullName>
        <formula>IF ( OR ( TEXT(StageName) = &quot;Auto Closed&quot;, TEXT(StageName) = &quot;Closed Lost&quot; ),
     IF ( Approve_Latest_Amount_By_SP__c &gt; 0 , Approve_Latest_Amount_By_SP__c ,
          IF ( Request_Lastest_Amount_By_SP__c &gt; 0 , Request_Lastest_Amount_By_SP__c ,
                IF ( Request_First_Amount_By_SP__c &gt; 0 , Request_First_Amount_By_SP__c ,
                      IF ( Amount_Report__c &gt; 0 , Amount_Report__c , Amount )))),0)</formula>
        <label>Lost_Amount_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>